--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,4 @@
- /* Author: Carlos Alvarez
- * URL: http://alvarez.is
- *
- * Project Name: Kelvin - Free Bootstrap 3 Resume Theme
- * Version: 1.0
- * URL: http://blacktie.co
+ /* Author: Nicolas Placeres
  */
 
 body {
@@ -12,6 +7,7 @@ body {
     font-weight: 300;
     font-size: 16px;
     color: #555;
+
 
     -webkit-font-smoothing: antialiased;
     -webkit-overflow-scrolling: touch;
@@ -83,6 +79,7 @@ a:after {
 	left: 0;
 	right: 0;
 	z-index: 10000;
+  background-color: black;
 	overflow: visible;
 	font: normal 16px/24px  'Open Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
@@ -153,15 +150,15 @@ a:after {
 
 /* Header Wrap */
 #headerwrap {
-	background: url(../img/header-bg.jpg) no-repeat center top;
+	background: url(../img/head-Page.png) no-repeat center top;
 	margin-top: 60px;
-	padding-top:140px;
+	padding-top:450px;
 	text-align:center;
 	background-attachment: relative;
 	background-position: center center;
 	min-height: 500px;
 	width: 100%;
-	
+
     -webkit-background-size: 100%;
     -moz-background-size: 100%;
     -o-background-size: 100%;
@@ -190,7 +187,7 @@ a:after {
 	padding-top: 60px;
 	padding-bottom: 60px;
 	color: white;
-} 
+}
 
 #intro h5, p {
 	color: white;
@@ -281,4 +278,67 @@ a:after {
 
 sm {
 	font-size: 12px;
+}
+
+/* Estilos Nuevos Headers*/
+*{
+	margin: 0;
+	padding: 0;
+	font-family: helvetica;
+}
+
+section#banner{
+	width: 100%;
+	background-image: url(../pictures/bg.jpg);
+	background-attachment: contain;
+	background-position: center;
+	background-repeat: no-repeat;
+}
+
+header{
+	position: fixed;
+	width: 100%;
+	height: 70px;
+	-webkit-transition: background-color .5s;
+}
+
+nav{
+	display: table;
+	margin: auto;
+	margin-top: 15px;
+	height: 40px;
+	-webkit-transition: margin-left .5s;
+}
+
+ul{
+	display: block;
+	float: left;
+	list-style: none;
+}
+
+ul li{
+	float: left;
+	margin: 10px;
+	padding: 2px;
+}
+
+ul a{
+	color: #F3F3F3;
+	text-decoration: none;
+}
+
+img#logo{
+	float:left;
+	border-radius: 50%;
+	display: block;
+	margin-left: 30px;
+	margin-right: 30px;
+	margin-top: 150px;
+	-webkit-transition: width .5s, height .5s, margin-right .5s, margin-top .5s;
+}
+
+#body{
+	width: 100%;
+	height: 500px;
+
 }
