--- a/css/main.css
+++ b/css/main.css
@@ -147,17 +147,25 @@ a:after {
 /*---------------------------------------------------
 	SECTION WRAPS
 ---------------------------------------------------*/
+#particles-js {
+  margin-top: 0px;
+	padding-top: 0px;
+  width: 100%;
+  height: 400px;
+  background-color: black;
+  /*background: url(../img/head-Page.png) no-repeat center top;*/
+
+}
 
 /* Header Wrap */
 #headerwrap {
-	background: url(../img/head-Page.png) no-repeat center top;
-	margin-top: 60px;
-	padding-top:450px;
+  /*background: url(../img/head-Page.png) no-repeat center top;*/
+  background-color: black;
 	text-align:center;
 	background-attachment: relative;
 	background-position: center center;
-	min-height: 500px;
-	width: 100%;
+	 min-height: 500px;
+	width: 100%;*/
 
     -webkit-background-size: 100%;
     -moz-background-size: 100%;
@@ -289,6 +297,7 @@ sm {
 
 section#banner{
 	width: 100%;
+  background-color: transparent;
 	background-image: url(../pictures/bg.jpg);
 	background-attachment: contain;
 	background-position: center;
@@ -340,5 +349,4 @@ img#logo{
 #body{
 	width: 100%;
 	height: 500px;
-
 }
