--- a/css/main.css
+++ b/css/main.css
@@ -149,10 +149,10 @@ a:after {
 ---------------------------------------------------*/
 #particles-js {
   margin-top: 0px;
-	padding-top: 0px;
+	padding-top: 100px;
   width: 100%;
-  height: 400px;
-  background-color: black;
+  height: 600px;
+  background-color: #2c3e50;
   /*background: url(../img/head-Page.png) no-repeat center top;*/
 
 }
@@ -160,11 +160,11 @@ a:after {
 /* Header Wrap */
 #headerwrap {
   /*background: url(../img/head-Page.png) no-repeat center top;*/
-  background-color: black;
+  background-color: #2c3e50;
 	text-align:center;
 	background-attachment: relative;
 	background-position: center center;
-	 min-height: 500px;
+	 
 	width: 100%;*/
 
     -webkit-background-size: 100%;
