--- a/css/main.css
+++ b/css/main.css
@@ -160,6 +160,7 @@ a:after {
 /* Header Wrap */
 #headerwrap {
   /*background: url(../img/head-Page.png) no-repeat center top;*/
+
   background-color: #2c3e50;
 	text-align:center;
 	background-attachment: relative;
@@ -349,4 +350,7 @@ img#logo{
 #body{
 	width: 100%;
 	height: 500px;
+}
+div.social_link{
+  font-size: 22px;
 }
