--- a/css/main.css
+++ b/css/main.css
@@ -351,6 +351,10 @@ img#logo{
 	width: 100%;
 	height: 500px;
 }
-div.social_link{
-  font-size: 22px;
+img.img-efecto{
+  filter: grayscale();
+  border: 3px double #2d3e50;
+}
+img.img-efecto:hover{
+  filter: opacity(.9);
 }
