--- a/css/main.css
+++ b/css/main.css
@@ -158,16 +158,18 @@ a:after {
   margin-top: 0px;
 	padding-top: 100px;
   width: 100%;
-  height: 600px;
+  height: 100%;
+  position: absolute;
   background-color: #2c3e50;
   /*background: url(../img/head-Page.png) no-repeat center top;*/
 
 }
 
+
 /* Header Wrap */
 #headerwrap {
   /*background: url(../img/head-Page.png) no-repeat center top;*/
-
+  padding-top: 390px;
   background-color: #2c3e50;
 	text-align:center;
 	background-attachment: relative;
