--- a/css/main.css
+++ b/css/main.css
@@ -158,7 +158,7 @@ a:after {
   margin-top: 0px;
 	padding-top: 100px;
   width: 100%;
-  height: 100%;
+  height: 880px;
   position: absolute;
   background-color: #2c3e50;
   /*background: url(../img/head-Page.png) no-repeat center top;*/
