--- a/css/main.css
+++ b/css/main.css
@@ -1,87 +1,90 @@
- /* Author: Nicolas Placeres
+/* Author: Nicolas Placeres
  */
 
 body {
   background-color: #f2f2f2;
-    font-family: "Lato";
-    font-weight: 300;
-    font-size: 16px;
-    color: #555;
+  font-family: "Lato";
+  font-weight: 300;
+  font-size: 16px;
+  color: #555;
 
-
-    -webkit-font-smoothing: antialiased;
-    -webkit-overflow-scrolling: touch;
+  -webkit-font-smoothing: antialiased;
+  -webkit-overflow-scrolling: touch;
 }
 
 /* Titles */
-h1, h2, h3, h4, h5, h6 {
-    font-family: "Raleway";
-    font-weight: 300;
-    color: #333;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Raleway";
+  font-weight: 300;
+  color: #333;
 }
-
 
 /* Paragraph & Typographic */
 p {
-    line-height: 28px;
-    margin-bottom: 25px;
+  line-height: 28px;
+  margin-bottom: 25px;
 }
 
 .centered {
-    text-align: center;
+  text-align: center;
 }
 
 /* Links */
 a {
-    color: #f85c37;
-    word-wrap: break-word;
+  color: #f85c37;
+  word-wrap: break-word;
 
-    -webkit-transition: color 0.1s ease-in, background 0.1s ease-in;
-    -moz-transition: color 0.1s ease-in, background 0.1s ease-in;
-    -ms-transition: color 0.1s ease-in, background 0.1s ease-in;
-    -o-transition: color 0.1s ease-in, background 0.1s ease-in;
-    transition: color 0.1s ease-in, background 0.1s ease-in;
+  -webkit-transition: color 0.1s ease-in, background 0.1s ease-in;
+  -moz-transition: color 0.1s ease-in, background 0.1s ease-in;
+  -ms-transition: color 0.1s ease-in, background 0.1s ease-in;
+  -o-transition: color 0.1s ease-in, background 0.1s ease-in;
+  transition: color 0.1s ease-in, background 0.1s ease-in;
 }
 
 a:hover,
 a:focus {
-    color: #7b7b7b;
-    text-decoration: none;
-    outline: 0;
+  color: #7b7b7b;
+  text-decoration: none;
+  outline: 0;
 }
 
 a:before,
 a:after {
-    -webkit-transition: color 0.1s ease-in, background 0.1s ease-in;
-    -moz-transition: color 0.1s ease-in, background 0.1s ease-in;
-    -ms-transition: color 0.1s ease-in, background 0.1s ease-in;
-    -o-transition: color 0.1s ease-in, background 0.1s ease-in;
-    transition: color 0.1s ease-in, background 0.1s ease-in;
+  -webkit-transition: color 0.1s ease-in, background 0.1s ease-in;
+  -moz-transition: color 0.1s ease-in, background 0.1s ease-in;
+  -ms-transition: color 0.1s ease-in, background 0.1s ease-in;
+  -o-transition: color 0.1s ease-in, background 0.1s ease-in;
+  transition: color 0.1s ease-in, background 0.1s ease-in;
 }
 
- hr {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 4px solid #ccc;
-    margin: 1em 0;
-    padding: 0;
+hr {
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 4px solid #ccc;
+  margin: 1em 0;
+  padding: 0;
 }
-
 
 /*---------------------------------------------------
 	3.1 Topbar
 ---------------------------------------------------*/
 
 #section-topbar {
-	position: fixed;
-	top: 0;
-	left: 0;
-	right: 0;
-	z-index: 10000;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 10000;
   background-color: black;
-	overflow: visible;
-	font: normal 16px/24px  'Open Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
+  overflow: visible;
+  font: normal 16px/24px "Open Sans", "Helvetica Neue", Helvetica, Arial,
+    sans-serif;
 }
 
 #section-topbar a {
@@ -89,9 +92,9 @@ a:after {
 }
 
 #topbar-inner {
-	background: #111;
-	line-height: 0;
-	text-align: center;
+  background: #111;
+  line-height: 0;
+  text-align: center;
 }
 
 /*
@@ -100,31 +103,31 @@ a:after {
 	By default, top navigation bar uses "fixed" position
 */
 #section-topbar ul#nav {
-	display: inline-block;
-	position: relative;
-	margin: 0;
-	padding: 0;
+  display: inline-block;
+  position: relative;
+  margin: 0;
+  padding: 0;
 
-	border-right: 1px solid #222;
+  border-right: 1px solid #222;
 
-	/* For IE, the outcast */
-	zoom:1;
-	*display: inline;
+  /* For IE, the outcast */
+  zoom: 1;
+  *display: inline;
 }
 
 #section-topbar ul#nav > li {
-	display: block;
-    float: left;
-    padding: 0;
+  display: block;
+  float: left;
+  padding: 0;
 }
 
 #skillsIcons i {
   color: green;
 }
 
-#skillsIcons{
+#skillsIcons {
   font-size: 20px;
-  font-family: 'Play', sans-serif;
+  font-family: "Play", sans-serif;
 }
 #section-topbar ul#nav a {
   display: block;
@@ -134,75 +137,71 @@ a:after {
   border-left: 1px solid #222;
 }
 
-	#section-topbar ul#nav a:hover {
-	  background: #222;
-	  text-decoration: none;
-	  border-left: 1px solid #111;
-	}
+#section-topbar ul#nav a:hover {
+  background: #222;
+  text-decoration: none;
+  border-left: 1px solid #111;
+}
 
-	#section-topbar ul#nav .active a {
-		background: #44bbaa;
-		border-left: 1px solid #111;
-	}
+#section-topbar ul#nav .active a {
+  background: #44bbaa;
+  border-left: 1px solid #111;
+}
 
-		#section-topbar ul#nav .active a:hover {
-			background: #44bbaa;
-		}
+#section-topbar ul#nav .active a:hover {
+  background: #44bbaa;
+}
 #section-topbar i {
-	font-size: 25px;
+  font-size: 25px;
 }
 /*---------------------------------------------------
 	SECTION WRAPS
 ---------------------------------------------------*/
 #particles-js {
   margin-top: 0px;
-	padding-top: 100px;
+  padding-top: 100px;
   width: 100%;
   height: 880px;
   position: absolute;
   background-color: #2c3e50;
   /*background: url(../img/head-Page.png) no-repeat center top;*/
-
 }
-
 
 /* Header Wrap */
 #headerwrap {
   /*background: url(../img/head-Page.png) no-repeat center top;*/
   padding-top: 390px;
   background-color: #2c3e50;
-	text-align:center;
-	background-attachment: relative;
-	background-position: center center;
+  text-align: center;
+  background-attachment: relative;
+  background-position: center center;
 
-	width: 100%;*/
+  width: 100%;
+  */-webkit-background-size: 100%;
+  -moz-background-size: 100%;
+  -o-background-size: 100%;
+  background-size: 100%;
 
-    -webkit-background-size: 100%;
-    -moz-background-size: 100%;
-    -o-background-size: 100%;
-    background-size: 100%;
-
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 #headerwrap h1 {
-	font-size: 80px;
-	color: #eff1f1bd;
-  font-family: 'Play', sans-serif;
-  transition: .2s;
+  font-size: 80px;
+  color: #eff1f1bd;
+  font-family: "Play", sans-serif;
+  transition: 0.2s;
 }
 #headerwrap h1:hover {
-    color: #55bd9c;
-
+  color: #55bd9c;
 }
 
 #headerwrap h3 {
-	font-size: 30px;
-	color: #eff1f1bd;
-  font-family: 'Patrick Hand',monospace;
+  font-size: 30px;
+  color: #eff1f1bd;
+  font-family: "Patrick Hand", monospace;
 }
 #headerwrap h3:hover {
   color: #55bd9c;
@@ -217,185 +216,182 @@ a:after {
 /* Intnro Wrap */
 
 #intro {
-	background: #2c3e50;
-	padding-top: 60px;
-	padding-bottom: 60px;
-	color: white;
+  background: #2c3e50;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  color: white;
 }
 
-#intro h5, p {
-	color: white;
+#intro h5,
+p {
+  color: white;
 }
 
 #intro i {
-	color: white;
-	font-size: 20px;
-	padding-right: 8px;
-	vertical-align: middle;
+  color: white;
+  font-size: 20px;
+  padding-right: 8px;
+  vertical-align: middle;
 }
-
 
 #skillswrap {
-	background: #2c3e50;
-	padding-top: 60px;
-	padding-bottom: 60px;
-	color: white;
+  background: #2c3e50;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  color: white;
 }
 
-#skillswrap h5, p {
-	color: white;
+#skillswrap h5,
+p {
+  color: white;
 }
 #skillswrap p {
-	font-family: 'Play', sans-serif;
+  font-family: "Play", sans-serif;
   font-size: 20px;
 }
 
 #footwrap {
-	background: #2f2f2f;
-	padding-top: 50px;
-	padding-bottom: 50px;
+  background: #2f2f2f;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 
 #footwrap p {
-	color: white;
+  color: white;
 }
 
 #footwrap h5 {
-	color: white;
+  color: white;
 }
 
-
 #footwrap t {
-	font-weight: 700;
+  font-weight: 700;
 }
 
 #footwrap i {
-	padding-right: 8px;
-	color: #1abc9c;
+  padding-right: 8px;
+  color: #1abc9c;
 }
 
 /* Copyright Wrap */
 
 #c {
-	background: #222222;
-	padding-top: 15px;
-	text-align: right;
+  background: #222222;
+  padding-top: 15px;
+  text-align: right;
 }
 
 #c p {
-	color: white
+  color: white;
 }
-
-
 
 /* Global Values */
 
 .desc {
-	padding-top: 50px;
+  padding-top: 50px;
 }
 
 .desc p {
-	color: #2f2f2f;
+  color: #2f2f2f;
 }
 
 .desc t {
-	color: #34495e;
-	font-weight: 700;
+  color: #34495e;
+  font-weight: 700;
   font-size: 20px;
 }
 
 .desc imp {
-	padding: 6px;
-	color: white;
-	background: #34495e;
+  padding: 6px;
+  color: white;
+  background: #34495e;
 }
 
 .desc more {
-	color: #black;
+  color: #black;
 }
 
-
 sm {
-	font-size: 20px;
+  font-size: 20px;
 }
 
 /* Estilos Nuevos Headers*/
-*{
-	margin: 0;
-	padding: 0;
-	font-family: helvetica;
+* {
+  margin: 0;
+  padding: 0;
+  font-family: helvetica;
 }
 
-section#banner{
-	width: 100%;
+section#banner {
+  width: 100%;
   background-color: transparent;
-	background-image: url(../pictures/bg.jpg);
-	background-attachment: contain;
-	background-position: center;
-	background-repeat: no-repeat;
+  background-image: url(../pictures/bg.jpg);
+  background-attachment: contain;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
-header{
-	position: fixed;
-	width: 100%;
-	height: 70px;
-	-webkit-transition: background-color .5s;
+header {
+  position: fixed;
+  width: 100%;
+  height: 70px;
+  -webkit-transition: background-color 0.5s;
 }
 
-nav{
-	display: table;
-	margin: auto;
-	margin-top: 15px;
-	height: 40px;
-	-webkit-transition: margin-left .5s;
+nav {
+  display: table;
+  margin: auto;
+  margin-top: 15px;
+  height: 40px;
+  -webkit-transition: margin-left 0.5s;
 }
 
-ul{
-	display: block;
-	float: left;
-	list-style: none;
+ul {
+  display: block;
+  float: left;
+  list-style: none;
 }
 
-ul li{
-	float: left;
-	margin: 10px;
-	padding: 2px;
+ul li {
+  float: left;
+  margin: 10px;
+  padding: 2px;
 }
 
-ul a{
-	color: #F3F3F3;
-	text-decoration: none;
+ul a {
+  color: #f3f3f3;
+  text-decoration: none;
 }
 
-img#logo{
-	float:left;
-	border-radius: 50%;
-	display: block;
-	margin-left: 30px;
-	margin-right: 30px;
-	margin-top: 150px;
+img#logo {
+  float: left;
+  border-radius: 50%;
+  display: block;
+  margin-left: 30px;
+  margin-right: 30px;
+  margin-top: 150px;
   width: 250px;
 
-	-webkit-transition: width .5s, height .5s, margin-right .5s, margin-top .5s;
+  -webkit-transition: width 0.5s, height 0.5s, margin-right 0.5s,
+    margin-top 0.5s;
 }
 
-
-#body{
-	width: 100%;
-	height: 500px;
+#body {
+  width: 100%;
+  height: 500px;
 }
-img.img-efecto{
+img.img-efecto {
   filter: grayscale();
   border: 3px double #2d3e50;
 }
-img.img-efecto:hover{
-  filter: opacity(.9);
+img.img-efecto:hover {
+  filter: opacity(0.9);
 }
 
-#porTitle{
+#porTitle {
   font-size: 25px;
-  font-family: 'Play', sans-serif;
+  font-family: "Play", sans-serif;
 }
-li.menu-item i:hover{
+li.menu-item i:hover {
   color: #bdc3c8;
 }
