--- a/css/main.css
+++ b/css/main.css
@@ -164,14 +164,14 @@ hr {
   height: 880px;
   position: absolute;
   background-color: #2c3e50;
-  /*background: url(../img/head-Page.png) no-repeat center top;*/
+  background: url(../pictures/bg.jpg) no-repeat center top;
+  background-attachment: fixed;
 }
 
 /* Header Wrap */
 #headerwrap {
   /*background: url(../img/head-Page.png) no-repeat center top;*/
   padding-top: 390px;
-  background-color: #2c3e50;
   text-align: center;
   background-attachment: relative;
   background-position: center center;
@@ -235,10 +235,12 @@ p {
 }
 
 #skillswrap {
-  background: #2c3e50;
+  /*background: #2c3e50;*/
+  background: url(../pictures/bg.jpg) no-repeat center top;
   padding-top: 60px;
   padding-bottom: 60px;
   color: white;
+  background-attachment: fixed;
 }
 
 #skillswrap h5,
