--- a/css/main.css
+++ b/css/main.css
@@ -165,7 +165,6 @@ hr {
   position: absolute;
   background-color: #2c3e50;
   background: url(../pictures/bg.jpg) no-repeat center top;
-  background-attachment: fixed;
 }
 
 /* Header Wrap */
@@ -396,4 +395,21 @@ img.img-efecto:hover {
 }
 li.menu-item i:hover {
   color: #bdc3c8;
+}
+
+@media only screen and (min-width: 768px) {
+  #particles-js {
+    background-attachment: fixed;
+  }
+  #skillswrap {
+    background-attachment: fixed;
+  }
+}
+@media only screen and (max-width: 768px) {
+  #particles-js {
+    background: #2c3e50;
+  }
+  #skillswrap {
+    background: #2c3e50;
+  }
 }
