--- a/css/main.css
+++ b/css/main.css
@@ -164,7 +164,6 @@ hr {
   height: 880px;
   position: absolute;
   background-color: #2c3e50;
-  background: url(../pictures/bg.jpg) no-repeat center top;
 }
 
 /* Header Wrap */
@@ -234,12 +233,11 @@ p {
 }
 
 #skillswrap {
-  /*background: #2c3e50;*/
-  background: url(../pictures/bg.jpg) no-repeat center top;
+  background: #2c3e50;
+  /*background: url(../pictures/bg.jpg) no-repeat center top;*/
   padding-top: 60px;
   padding-bottom: 60px;
   color: white;
-  background-attachment: fixed;
 }
 
 #skillswrap h5,
@@ -399,17 +397,17 @@ li.menu-item i:hover {
 
 @media only screen and (min-width: 768px) {
   #particles-js {
+    background: url(../pictures/bg.jpg) repeat center top;
     background-attachment: fixed;
   }
   #skillswrap {
+    background: url(../pictures/bg.jpg) repeat center top;
     background-attachment: fixed;
   }
 }
 @media only screen and (max-width: 768px) {
   #particles-js {
-    background: #2c3e50;
   }
   #skillswrap {
-    background: #2c3e50;
   }
 }
