--- a/css/main.css
+++ b/css/main.css
@@ -214,7 +214,8 @@ hr {
 /* Intnro Wrap */
 
 #intro {
-  background: #2c3e50;
+  /*background: #2c3e50; */
+  background: url(../pictures/dark-grey-terrazzo.png) repeat center top;
   padding-top: 60px;
   padding-bottom: 60px;
   color: white;
@@ -397,7 +398,7 @@ li.menu-item i:hover {
 
 @media only screen and (min-width: 768px) {
   #particles-js {
-    background: url(../pictures/bg.jpg) repeat center top;
+    background: url(../pictures/dark-grey-terrazzo.png) repeat center top;
     background-attachment: fixed;
   }
   #skillswrap {
