--- a/css/main.css
+++ b/css/main.css
@@ -215,7 +215,7 @@ hr {
 
 #intro {
   /*background: #2c3e50; */
-  background: url(../pictures/dark-grey-terrazzo.png) repeat center top;
+  background: url(../pictures/footer_lodyas.png) repeat center top;
   padding-top: 60px;
   padding-bottom: 60px;
   color: white;
@@ -398,7 +398,7 @@ li.menu-item i:hover {
 
 @media only screen and (min-width: 768px) {
   #particles-js {
-    background: url(../pictures/dark-grey-terrazzo.png) repeat center top;
+    background: url(../pictures/footer_lodyas.png) repeat center top;
     background-attachment: fixed;
   }
   #skillswrap {
